src/z80asm/z80asm2/t/50-layout/expected/layout_defs_string_02.txt
% z88dk-z80asm -v -dump-after-layout t/50-layout//input/layout_defs_string_02.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/50-layout/input/layout_defs_string_02.asm...
t/50-layout/input/layout_defs_string_02.asm:2:6: error: DEFS size cannot be less than the string length
    defs 2, "hello"
         ^
t/50-layout/input/layout_defs_string_02.asm:4:6: error: DEFS cannot be negative
    defs -10, "world"
         ^
Assembly completed with 2 errors
